<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:fitsSystemWindows="true"
    >

    <ImageView
        android:id="@+id/iv_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/home_furniture"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_overlay"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_cross"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:src="@drawable/ic_clear"
            android:layout_margin="@dimen/margin_medium_2"/>
        <TextView
            android:id="@+id/tv_houzz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/houzz"
            android:textColor="@color/white"
            android:textSize="@dimen/text_big_3x"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock_houzz"
            android:textSize="@dimen/text_heading_1x"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:lineSpacingMultiplier="1.2"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_medium_2"/>

        <TextView
            android:id="@+id/btn_start"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            style="@style/AccentButton"
            android:text="@string/get_started"
            android:textSize="@dimen/text_regular_3x"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/margin_medium_2"
            android:paddingBottom="@dimen/margin_medium_2"
            android:paddingLeft="@dimen/margin_xlarge"
            android:paddingRight="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/get_start_top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_2x"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_long_text"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"/>
</RelativeLayout>
