<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_medium"
    app:cardCornerRadius="@dimen/margin_small">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/rl_pro"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/pro1"
                android:scaleType="centerCrop"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/black_pro"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_pro_circle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/pro_human"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_medium_2"/>
            <TextView
                android:id="@+id/tv_pro_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_pro_circle"
                android:text="@string/bill_fry_construction_wm_h_fry_const_co"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:ellipsize="end"
                android:lines="1"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="72dp"
                />
            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_below="@id/tv_pro_name"
                android:layout_alignStart="@id/tv_pro_name"
                android:layout_marginStart="@dimen/margin_medium"
                android:rating="5"
                />
            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/rating_bar"
                android:layout_below="@id/tv_pro_name"
                android:text="@string/_51_reviews"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_2x"
                android:layout_marginBottom="@dimen/margin_medium"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_pro_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_pro"
            android:layout_margin="@dimen/margin_medium_2"
            android:text="@string/san_francisco_bay_area_cupertino_california"
            android:textSize="@dimen/text_regular_2x"
            android:ellipsize="end"
            android:lines="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:id="@+id/btn_call"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_medium_2"
                android:layout_weight="1"
                android:foreground="@drawable/bg_ripple_green"
                android:background="@drawable/bg_round_green_border"
                android:clickable="true"
                android:focusable="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_call"
                    android:drawablePadding="@dimen/margin_medium"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/btn_contact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_medium_2"
                android:layout_weight="1"
                android:foreground="@drawable/bg_ripple_white"
                android:background="@drawable/bg_round_green"
                android:clickable="true"
                android:focusable="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_mail_white"
                    android:drawablePadding="@dimen/margin_medium"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>
